# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_binary(
    name = "rectangle_histogram",
    srcs = ["rectangle_histogram.cc"],
)

cc_binary(
    name = "maximal_rectangle",
    srcs = ["maximal_rectangle.cc"],
)

cc_binary(
    name = "climbing_stairs",
    srcs = ["climbing_stairs.cc"],
)

cc_binary(
    name = "first_bad_version",
    srcs = ["first_bad_version.cc"],
)

cc_binary(
    name = "valid_parentheses",
    srcs = ["valid_parentheses.cc"],
)

cc_binary(
    name = "longest_valid_parentheses",
    srcs = ["longest_valid_parentheses.cc"],
)

cc_binary(
    name = "valid_palindrome",
    srcs = ["valid_palindrome.cc"],
)

