# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "rectangle_histogram",
    srcs = ["rectangle_histogram.cc"],
)

cc_binary(
    name = "maximal_rectangle",
    srcs = ["maximal_rectangle.cc"],
)

cc_binary(
    name = "climbing_stairs",
    srcs = ["climbing_stairs.cc"],
)

cc_binary(
    name = "first_bad_version",
    srcs = ["first_bad_version.cc"],
)

cc_binary(
    name = "valid_parentheses",
    srcs = ["valid_parentheses.cc"],
)

cc_binary(
    name = "longest_valid_parentheses",
    srcs = ["longest_valid_parentheses.cc"],
)

cc_binary(
    name = "valid_palindrome",
    srcs = ["valid_palindrome.cc"],
)

cc_binary(
    name = "longest_palindromic_substring",
    srcs = ["longest_palindromic_substring.cc"],
)

cc_binary(
    name = "maximal_square",
    srcs = ["maximal_square.cc"],
)

cc_binary(
    name = "clone_graph",
    srcs = ["clone_graph.cc"],
)

cc_binary(
    name = "subarray_sum",
    srcs = ["subarray_sum.cc"],
)

cc_binary(
    name = "min_path_sum",
    srcs = ["min_path_sum.cc"],
)

cc_binary(
    name = "valid_palindrome_ii",
    srcs = ["valid_palindrome_ii.cc"],
)

cc_binary(
    name = "triangle",
    srcs = ["triangle.cc"],
)

cc_binary(
    name = "decode_ways",
    srcs = ["decode_ways.cc"],
)

cc_binary(
    name = "coin_change",
    srcs = ["coin_change.cc"],
)

cc_binary(
    name = "counting_bits",
    srcs = ["counting_bits.cc"],
)

cc_binary(
    name = "perfect_squares",
    srcs = ["perfect_squares.cc"],
)

cc_binary(
    name = "integer_break",
    srcs = ["integer_break.cc"],
)

cc_binary(
    name = "basic_calculator_ii",
    srcs = ["basic_calculator_ii.cc"],
)

cc_binary(
    name = "basic_calculator",
    srcs = ["basic_calculator.cc"],
)

cc_binary(
    name = "kth_smallest_element_in_a_bst",
    srcs = ["kth_smallest_element_in_a_bst.cc"],
)

cc_binary(
    name = "vertical_order_traversal_of_a_binary_tree",
    srcs = ["vertical_order_traversal_of_a_binary_tree.cc"],
)

cc_binary(
    name = "unique_paths",
    srcs = ["unique_paths.cc"],
)

cc_binary(
    name = "word_break",
    srcs = ["word_break.cc"],
)

cc_binary(
    name = "word_break_ii",
    srcs = ["word_break_ii.cc"],
)

cc_binary(
    name = "create_maximum_number",
    srcs = ["create_maximum_number.cc"],
)

cc_binary(
    name = "falling_squares",
    srcs = ["falling_squares.cc"],
)

cc_binary(
    name = "randomized_collection",
    srcs = ["randomized_collection.cc"],
)

cc_binary(
    name = "divide_two_integers",
    srcs = ["divide_two_integers.cc"],
)

cc_binary(
    name = "number_of_one_bits",
    srcs = ["number_of_one_bits.cc"],
)

cc_binary(
    name = "two_sum",
    srcs = ["two_sum.cc"],
)

cc_binary(
    name = "sum_of_two_integers",
    srcs = ["sum_of_two_integers.cc"],
)

cc_binary(
    name = "maximum_subarray",
    srcs = ["maximum_subarray.cc"],
)

cc_binary(
    name = "max_profit",
    srcs = ["max_profit.cc"],
)

cc_binary(
    name = "contains_duplicate",
    srcs = ["contains_duplicate.cc"],
)

cc_binary(
    name = "product_except_self",
    srcs = ["product_except_self.cc"],
)

cc_binary(
    name = "rotate_image",
    srcs = ["rotate_image.cc"],
)

cc_binary(
    name = "spiral_order",
    srcs = ["spiral_order.cc"],
)

cc_binary(
    name = "set_matrix_zeros",
    srcs = ["set_matrix_zeros.cc"],
)

cc_binary(
    name = "word_search",
    srcs = ["word_search.cc"],
)

cc_binary(
    name = "insert_interval",
    srcs = ["insert_interval.cc"],
)

cc_binary(
    name = "merge_intervals",
    srcs = ["merge_intervals.cc"],
)

cc_binary(
    name = "non_overlapping_intervals",
    srcs = ["non_overlapping_intervals.cc"],
)

cc_binary(
    name = "rotate_180",
    srcs = ["rotate_180.cc"],
)

cc_binary(
    name = "top_k_frequent",
    srcs = ["top_k_frequent.cc"],
)

cc_binary(
    name = "container_with_most_water",
    srcs = ["container_with_most_water.cc"],
)

cc_binary(
    name = "house_robber",
    srcs = ["house_robber.cc"],
)

cc_binary(
    name = "house_robber_ii",
    srcs = ["house_robber_ii.cc"],
)

cc_binary(
    name = "the_skyline_problem",
    srcs = ["the_skyline_problem.cc"],
)

cc_binary(
    name = "contains_duplicate_iii",
    srcs = ["contains_duplicate_iii.cc"],
)

cc_binary(
    name = "failing_squares",
    srcs = ["falling_squares.cc"],
)

cc_binary(
    name = "lower_bound",
    srcs = ["lower_bound.cc"],
)

cc_binary(
    name = "shifting_letters_ii",
    srcs = ["shifting_letters_ii.cc"],
)

cc_binary(
    name = "isomorphic_strings",
    srcs = ["isomorphic_strings.cc"],
)

cc_binary(
    name = "word_pattern",
    srcs = ["word_pattern.cc"],
)

cc_binary(
    name = "text_justification",
    srcs = ["text_justification.cc"],
)

py_binary(
    name = "text_justification_py",
    srcs = ["text_justification_py.py"],
)

py_binary(
    name = "parse_lisp_expression",
    srcs = ["parse_lisp_expression.py"],
)

cc_binary(
    name = "split_message_based_on_limit",
    srcs = ["split_message_based_on_limit.cc"],
)

cc_binary(
    name = "minimum_window_substring",
    srcs = ["minimum_window_substring.cc"],
)

cc_binary(
    name = "sliding_window_maximum",
    srcs = ["sliding_window_maximum.cc"],
)

cc_binary(
    name = "substring_with_concatenation_of_all_words",
    srcs = ["substring_with_concatenation_of_all_words.cc"]
)

cc_binary(
    name = "search_a_2d_matrix",
    srcs = ["search_a_2d_matrix.cc"]
)

cc_binary(
    name = "random_pick_with_weight",
    srcs = ["random_pick_with_weight.cc"]
)

cc_binary(
    name = "random_pick_index",
    srcs = ["random_pick_index.cc"]
)

cc_binary(
    name = "next_greater_element",
    srcs = ["next_greater_element.cc"]
)

cc_binary(
    name = "daily_temperatures",
    srcs = ["daily_temperatures.cc"]
)

cc_binary(
    name = "find_the_duplicate_number",
    srcs = ["find_the_duplicate_number.cc"]
)

cc_binary(
    name = "longest_increasing_subsequence",
    srcs = ["longest_increasing_subsequence.cc"]
)

cc_binary(
    name = "russian_doll_envelopes",
    srcs = ["russian_doll_envelopes.cc"]
)

cc_binary(
    name = "paths_in_matrix_whose_sum_is_divisible_by_k",
    srcs = ["paths_in_matrix_whose_sum_is_divisible_by_k.cc"]
)

cc_binary(
    name = "maximum_performance_of_a_team",
    srcs = ["maximum_performance_of_a_team.cc"]
)
cc_binary(
    name = "best_time_to_buy_and_sell_stock_iii",
    srcs = ["best_time_to_buy_and_sell_stock_iii.cc"]
)
cc_binary(
    name = "median_of_two_sorted_arrays",
    srcs = ["median_of_two_sorted_arrays.cc"]
)
cc_binary(
    name = "kth_smallest_element_in_a_sorted_matrix",
    srcs = ["kth_smallest_element_in_a_sorted_matrix.cc"]
)

cc_binary(
    name = "count_caesar_cipher_pairs",
    srcs = ["count_caesar_cipher_pairs.cc"]
)

cc_binary(
    name = "number_of_centered_subarrays",
    srcs = ["number_of_centered_subarrays.cc"]
)

cc_binary(
    name = "find_nth_smallest_integer_with_k_one_bits",
    srcs = ["find_nth_smallest_integer_with_k_one_bits.cc"]
)

cc_binary(
    name = "path_sum_iii",
    srcs = ["path_sum_iii.cc"],
)
