load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "977B_two_gram",
    srcs = ["977B_two_gram.cc"],
)

cc_binary(
    name = "1374C_move_brackets",
    srcs = ["1374C_move_brackets.cc"],
)

cc_binary(
    name = "1705B_mark_the_dust_sweeper",
    srcs = ["1705B_mark_the_dust_sweeper.cc"],
)

cc_binary(
    name = "2158A_suspension",
    srcs = ["2158A_suspension.cc"],
)

cc_binary(
    name = "2158B_split",
    srcs = ["2158B_split.cc"],
)

cc_binary(
    name = "2175A_little_fairys_painting",
    srcs = ["2175A_little_fairys_painting.cc"],
)
