load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "977B_two_gram",
    srcs = ["977B_two_gram.cc"],
)

cc_binary(
    name = "1374C_move_brackets",
    srcs = ["1374C_move_brackets.cc"],
)

cc_binary(
    name = "1705B_mark_the_dust_sweeper",
    srcs = ["1705B_mark_the_dust_sweeper.cc"],
)

cc_binary(
    name = "2158A_suspension",
    srcs = ["2158A_suspension.cc"],
)

cc_binary(
    name = "2158B_split",
    srcs = ["2158B_split.cc"],
)

cc_binary(
    name = "2175A_little_fairys_painting",
    srcs = ["2175A_little_fairys_painting.cc"],
)

cc_binary(
    name = "1747C_swap_game",
    srcs = ["1747C_swap_game.cc"],
)


cc_binary(
    name = "1903A_halloumi_boxes",
    srcs = ["1903A_halloumi_boxes.cc"],
)

cc_binary(
    name = "1901A_line_trip",
    srcs = ["1901A_line_trip.cc"],
)

cc_binary(
    name = "1900A_cover_in_water",
    srcs = ["1900A_cover_in_water.cc"],
)

cc_binary(
    name = "1899A_game_with_integers",
    srcs = ["1899A_game_with_integers.cc"],
)

cc_binary(
    name = "1913B_swap_and_delete",
    srcs = ["1913B_swap_and_delete.cc"],
)

cc_binary(
    name = "1883C_raspberries",
    srcs = ["1883C_raspberries.cc"],
)
